# AlgLineal

./: clase_matriz.py  clase_sistema_ecuaciones.py  funciones.py  historial.py  main.py  main_gui.py  prueba.py  pyproject.toml
Additiona_functions/: convertir_formato_lista.py
Desarrollo/: estructura_de_calc.py  prueba_entradas_3.py
GUI/: entrada_matriz_frame.py  frame_principal_funcion_calc.py  frame_principal_vect_matr_calc.py
GUI/acerca_de/: acerca_de_frame.py  acerca_de_principal.py  sobre_autores.py
GUI/archivos_adicionales/: tema.json
GUI/calculadoras/: Au_Ax_calc.py  LU_calc_frame.py  cramer_frame.py  determinante_frame.py  ecuacion_matricial_matrizxvector_calc.py  gauss_jordan_calc.py  multi_fila_x_columna_calc.py  operacion_con_vectores_calc.py  operaciones_calc.py  transpuesta_inversa_calc.py
GUI/gui_calc/: calculadora.py  frame_entrada_funcion.py
GUI/gui_calc_raices/: frame_entrada_funcion.py
Historial/: escoger_matriz.py  historial_popup_ui.py  historial_visualizar_popup.py  importar_matriz.py  matriz_historial.py
funcionesDeMenu/: funcionesMenu.py  menu.py
funcionesDePruebas/: funcion_original_matriz.py  funcion_original_matriz_reducida.py  prueba2reducida.py
funciones_adicionales/: CTkSlideView.py  convertir_formato_lista.py
models/: clase_matriz.py  clase_matriz_fact_LU.py  clase_matriz_inv_tran.py  clase_matriz_op_ari.py  clase_matriz_operaciones.py  clase_matriz_vectores.py  clase_sistema_ecuaciones.py  clase_vector.py  operacion_cramer.py  operaciones_determinante.py
utils/: CTkSlideView.py  dropdown_menu.py
(+69 files in other folders)
